Всё готово. Только без параметризации. Но с Jacoco.